# rs-reusable-memory

./: Cargo.toml  README.md
src/: base.rs  borrow.rs  lib.rs
src/borrow/: drain.rs  manual_specialization.rs  mod.rs
