[package]
name = "reusable-memory"
version = "0.2.1"
authors = ["TheEdward162 <TheEdward162@gmail.com>"]
edition = "2018"
repository = "https://github.com/TheEdward162/rs-reusable-memory"
readme = "README.md"
description = "Reusable memory that can be mutably borrowed as another type."
license = "MIT OR Apache-2.0"

[dependencies]
